tulip: defconfig: Build qcacld wlan modules in-kernel for custom rom
and regenerate full defconfig

Signed-off-by: Rama Bondan Prakoso <ramanarubp@gmail.com>

--- a/arch/arm64/configs/tulip-full_defconfig
+++ b/arch/arm64/configs/tulip-full_defconfig
@@ -1857,7 +1857,8 @@ CONFIG_KEYBOARD_GPIO=y
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_NT36xxx=y
-# CONFIG_TOUCHSCREEN_FTS is not set
+CONFIG_TOUCHSCREEN_FTS=y
+CONFIG_TOUCHSCREEN_FTS_DIRECTORY="focaltech_touch"
 CONFIG_OF_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
@@ -1915,7 +1916,7 @@ CONFIG_TOUCHSCREEN_NVT_A=y
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_IT7260_I2C is not set
 # CONFIG_TOUCHSCREEN_ST is not set
-# CONFIG_TOUCHSCREEN_FOCAL_FT8719 is not set
+CONFIG_TOUCHSCREEN_FOCAL_FT8719=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
@@ -4043,7 +4044,7 @@ CONFIG_ION_MSM=y
 #
 # Qualcomm Atheros CLD WLAN module
 #
-CONFIG_QCA_CLD_WLAN=m
+CONFIG_QCA_CLD_WLAN=y
 CONFIG_QCACLD_WLAN_LFR3=y
 CONFIG_PRIMA_WLAN_OKC=y
 CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
